--- a/ose-dba/app/datasources.properties
+++ b/ose-dba/app/datasources.properties
@@ -3,12 +3,11 @@ DATASOURCES=TEIID
 
 TEIID_JNDI=java:/jboss/datasources/Hibernate4TeiidQuickstartDS
 TEIID_DRIVER=teiid
-TEIID_USERNAME=teiidUser
+TEIID_USERNAME=demouser
 TEIID_PASSWORD=P@ssword1
-TEIID_URL=jdbc:teiid:Hibernate_Portfolio@mm://jdbc-datavirt.demo.svc.cluster.local:31000;showplan=on
-#TEIID_URL=jdbc:teiid:Hibernate_Portfolio@mms://securejdbc-datavirt-demo.cloudapps.example.com:443;showplan=on
+TEIID_URL=jdbc:teiid:Hibernate_Portfolio@mm://${JDBC_DATAVIRT_SERVICE_HOST}:${JDBC_DATAVIRT_SERVICE_PORT};showplan=on
 TEIID_DATABASE=Hibernate_Portfolio
-TEIID_SERVICE_HOST=jdbc-datavirt.demo.svc.cluster.local
+TEIID_SERVICE_HOST=${JDBC_DATAVIRT_SERVICE_HOST}
 TEIID_SERVICE_PORT=31000
 TEIID_NONXA=true
 TEIID_JTA=false
